Quick overflow fix

--- a/editor.css
+++ b/editor.css
@@ -14,6 +14,10 @@ body {
   font-size: 16px;
 }
 
+body, html, .wrapper, .navbar, #container, #diff-container, #editor-container {
+  overflow: hidden;
+}
+
 .wrapper {
   width: 100vw;
   height: 100vh;
